--- a/gittu.html
+++ b/gittu.html
@@ -7,6 +7,8 @@
     <title>my first github projects</title>
 </head>
 <body>
-    
+    <h1>HELLO BUDDY</h1>
+    <p>now i'm pushing a code into github</p>
+    <img src="banana 5-01.jpg" alt="">
 </body>
 </html>
